--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -87,7 +87,7 @@ input.invalid-input {
   width: 16px;
   height: 24px;
   z-index: 10;
-  background-image: url('./images/icon-dollar.svg');
+  background-image: url('../images/icon-dollar.svg');
   background-size: cover;
   user-select: none;
   pointer-events: none;
@@ -101,7 +101,7 @@ input.invalid-input {
   width: 21px;
   left: 12px;
   z-index: 10;
-  background-image: url('./images//icon-person.svg');
+  background-image: url('../images/icon-person.svg');
   background-size: cover;
   user-select: none;
   pointer-events: none;
