Title attribute for large numbers, styling

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,6 +4,8 @@
   --desktop: 1440px;
   --primaryColor: #26c0ab;
   --rightGreen: #00474B;
+  --adorableGreen: #9FE8DF;
+  --rightGreen35: rgba(0, 71, 75, 0.35);
   --color1: #00494d;
   --color2: #5e7a7d;
   --color3: #7f9c9f;
@@ -25,6 +27,19 @@
   font-family: var(--font-family);
 }
 
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: var(--rightGreen35);
+  opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: var(--rightGreen35);
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+  color: var(--rightGreen35);
+}
+
 body {
   height: 100vh;
   display: flex;
@@ -35,8 +50,8 @@ body {
 
 div.page-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
+  /* flex-direction:  */
 }
 
 label {
@@ -50,6 +65,7 @@ input[type="text"] {
   background: var(--inputBgColor);
   border: 2px solid var(--inputBgColor);
   color: var(--rightGreen);
+  font-weight: bold;
   height: 48px;
   width: 100%;
   border-radius: 5px;
@@ -57,11 +73,25 @@ input[type="text"] {
   font-size: 24px;
   text-align: right;
   position: relative;
+  outline: none;
 }
 
 input[type="text"]:focus {
   border: 2px solid var(--primaryColor);
   outline: none;
+}
+
+button:active {
+  background: var(--adorableGreen) !important;
+  color: var(--rightGreen) !important;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+input:active {
+  border-color: var(--adorableGreen) !important;
 }
 
 #bill.icon-input {
@@ -116,6 +146,12 @@ input.invalid-input {
   color: var(--errorRed);
 }
 
+.logo-container {
+  width: 100%;
+  max-width: 920px;
+  text-align: center;
+}
+
 img.logo {
   height: 50px;
   width: auto;
@@ -142,7 +178,7 @@ img.logo {
 
 .label-line label {
   line-height: 24px;
-  margin-bottom: 6px;
+  margin-bottom: 16px;
 }
 
 .tip-container {
@@ -188,6 +224,10 @@ img.logo {
   border-radius: 15px;
 }
 
+.calculations-lines {
+  margin-bottom: 32px;
+}
+
 .calculations .line {
   display: flex;
   justify-content: space-between;
@@ -196,8 +236,17 @@ img.logo {
   overflow: hidden;
 }
 
-.calculations .line #total, .calculations .line #per-person {
+.calculations .line:first-of-type {
+  margin-bottom: 40px;
+}
+
+.value {
   font-size: 48px;
+  line-height: 1;
+  max-width: 70%;
+  overflow-x: hidden;
+  text-overflow: ellipsis;
+  word-wrap: nowrap;
 }
 
 .calculations .line .label {
@@ -240,5 +289,16 @@ img.logo {
     grid-template-columns: 1fr 1fr;
     grid-row-gap: 16px;
     grid-column-gap: 16px;
+  }
+
+  .value {
+    font-size: 32px;
+  }
+}
+
+@media (max-width: 375px) {
+  .calculator-container {
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
   }
 }
