--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -41,17 +41,25 @@
 }
 
 body {
-  height: 100vh;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;
+  height: 100%;
   margin: 0;
 }
 
 div.page-container {
   display: flex;
-  flex-wrap: wrap;
-  /* flex-direction:  */
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+}
+
+.spacer {
+  height: 100%;
+}
+
+.spacer:first-of-type {
+  min-height: 40px;
 }
 
 label {
@@ -147,9 +155,12 @@ input.invalid-input {
 }
 
 .logo-container {
+  height: 100%;
   width: 100%;
   max-width: 920px;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 img.logo {
