--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap');
+
 :root {
   --mobile: 375px;
   --desktop: 1440px;
@@ -27,16 +28,20 @@
   font-family: var(--font-family);
 }
 
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
   color: var(--rightGreen35);
-  opacity: 1; /* Firefox */
+  opacity: 1;
+  /* Firefox */
 }
 
-:-ms-input-placeholder { /* Internet Explorer 10-11 */
+:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
   color: var(--rightGreen35);
 }
 
-::-ms-input-placeholder { /* Microsoft Edge */
+::-ms-input-placeholder {
+  /* Microsoft Edge */
   color: var(--rightGreen35);
 }
 
@@ -216,6 +221,10 @@ img.logo {
   color: var(--rightGreen);
 }
 
+.tip-container button:focus {
+  outline-color: var(--primaryColor);
+}
+
 .tip-container input.tip-option {
   font-family: var(--font-family);
   max-height: 48px;
@@ -255,7 +264,7 @@ img.logo {
   font-size: 48px;
   line-height: 1;
   max-width: 70%;
-  overflow-x: hidden;
+  overflow: hidden;
   text-overflow: ellipsis;
   word-wrap: nowrap;
 }
